feat(logging): Implementer støtte for audit logging (oppslagslogg)
